# agentgateway

./: .devcontainer.json  .dockerignore  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.ext  Dockerfile.windows  MCP-Authentication.md  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  config.json  deny.toml  go.mod  main.rs  rbac.rs  relay.rs  rust-toolchain.toml  rustfmt.toml  sse-config.json
a2a-sdk/: Cargo.toml
a2a-sdk/src/: lib.rs
agent-core/: Cargo.toml
agent-core/src/: copy.rs  drain.rs  lib.rs  metrics.rs  prelude.rs  strng.rs
agent-hbone/: Cargo.toml
agent-hbone/src/: client.rs  lib.rs  pool.rs  server.rs
agent-proxy/: Cargo.toml  build.rs
agent-proxy/proto/: adp.proto  workload.proto
agent-proxy/src/: ext_proc.rs  gateway.rs  hbone.rs  lib.rs  stream.rs  util.rs
agent-proxy/src/http/: filters.rs  mod.rs  timeout.rs  transformation.rs
agent-proxy/src/store/: binds.rs  discovery.rs  mod.rs
agent-proxy/src/transport/: tls.rs
agent-proxy/src/types/: agent.rs  discovery.rs  mod.rs  proto.rs
agent-xds/: Cargo.toml  build.rs
agent-xds/src/: client.rs  lib.rs  metrics.rs
crates/a2a-sdk/: Cargo.toml  README.md
crates/a2a-sdk/src/: jsonrpc.rs  lib.rs
crates/agent-hbone/: Cargo.toml
crates/agent-hbone/src/: lib.rs  server.rs
crates/agentgateway/: Cargo.toml  build.rs
crates/agentgateway/benches/: bench_tests.rs
crates/agentgateway/proto/: citadel.proto  common.proto  ext_authz.proto  ext_proc.proto  listener.proto  rbac.proto  resource.proto  rls.proto  workload.proto  xds.proto
crates/agentgateway/proto/a2a/: target.proto
crates/agentgateway/proto/mcp/: target.proto
crates/agentgateway/src/: admin.rs  app.rs  authn.rs  config.rs  drain.rs  json.rs  lib.rs  main.rs  mtrcs.rs  outbound.rs  rbac.rs  relay.rs  serdes.rs  sse.rs  state_manager.rs  strng.rs  trcng.rs  ui.rs  xds.rs
crates/agentgateway/src/a2a/: handlers.rs  metrics.rs  mod.rs  relay.rs
crates/agentgateway/src/assets/: dashboard.html
crates/agentgateway/src/cel/: functions.rs  functions_tests.rs  mod.rs  strings.rs  tests.rs
crates/agentgateway/src/client/: dns.rs  dns_tests.rs  mod.rs
crates/agentgateway/src/client/hyperrustls/: mod.rs
crates/agentgateway/src/control/: caclient.rs  mod.rs
crates/agentgateway/src/http/: auth.rs  authorization.rs  authorization_tests.rs  backendtls.rs  buflist.rs  cors.rs  ext_authz.rs  ext_proc.rs  filters.rs  filters_test.rs  jwt.rs  localratelimit.rs  mod.rs  remoteratelimit.rs  route.rs  route_test.rs  tests_common.rs  timeout.rs  transformation.rs  transformation_cel.rs  transformation_cel_tests.rs  transformation_tests.rs
crates/agentgateway/src/http/compression/: mod.rs
crates/agentgateway/src/http/retry/: body.rs  body_tests.rs  mod.rs
crates/agentgateway/src/llm/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs  policy.rs  tests.rs  universal.rs  vertex.rs
crates/agentgateway/src/llm/pii/: credit_card_recognizer.rs  email_recognizer.rs  mod.rs  pattern_recognizer.rs  phone_recognizer.rs  recognizer.rs  recognizer_result.rs  tests.rs  url_recognizer.rs  us_ssn_recognizer.rs
crates/agentgateway/src/llm/tests/: anthropic-basic_input.snap  anthropic-full_input.snap  anthropic-request_basic.snap  anthropic-request_full.snap  anthropic-request_tool-call.snap  anthropic-tool_call_input.snap  (+22 more)
crates/agentgateway/src/management/: admin.rs  hyper_helpers.rs  metrics_server.rs  mod.rs  readiness_server.rs
crates/agentgateway/src/mcp/: mod.rs  rbac.rs  rbac_tests.rs  sse.rs
crates/agentgateway/src/outbound/: openapi.rs
crates/agentgateway/src/parse/: aws_sse.rs  mod.rs  parse_tests.rs  passthrough.rs  sse.rs  transform.rs
crates/agentgateway/src/proxy/: gateway.rs  gateway_test.rs  httpproxy.rs  mod.rs  request_builder.rs  tcpproxy.rs
crates/agentgateway/src/relay/: metrics.rs  pool.rs  upstream.rs
crates/agentgateway/src/store/: binds.rs  discovery.rs  mod.rs
crates/agentgateway/src/telemetry/: log.rs  metrics.rs  mod.rs  trc.rs
crates/agentgateway/src/transport/: hbone.rs  mod.rs  stream.rs  tls.rs
crates/agentgateway/src/types/: agent.rs  agent_xds.rs  discovery.rs  local.rs  mod.rs  proto.rs
crates/agentgateway/src/xds/: client.rs  metrics.rs  types.rs
crates/agentgateway/tests/: integration.rs
crates/agentgateway/tests/common/: compare.rs  gateway.rs  mod.rs
crates/agentproxy/: Cargo.toml
crates/agentproxy/src/: app.rs  config.rs  main.rs  telemetry.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: bow.rs  copy.rs  drain.rs  lib.rs  metrics.rs  prelude.rs  readiness.rs  signal.rs  strng.rs  telemetry.rs  trcng.rs  version.rs
crates/core/src/telemetry/: date.rs  msg.rs  nonblocking.rs  worker.rs
crates/hbone/: Cargo.toml
crates/hbone/src/: client.rs  lib.rs  pool.rs  server.rs
crates/hyper-util-fork/: Cargo.toml
crates/hyper-util-fork/src/: error.rs  lib.rs
crates/hyper-util-fork/src/client/: client.rs
crates/hyper-util-fork/src/common/: exec.rs  future.rs  lazy.rs  mod.rs  sync.rs  timer.rs
crates/hyper-util-fork/src/rt/: tokio.rs
crates/hyper-util-fork/src/service/: glue.rs  oneshot.rs
crates/mock-server/: Cargo.toml
crates/mock-server/src/: lib.rs  main.rs
crates/proxy/: Cargo.toml
crates/proxy/proto/: ext_proc.proto  resource.proto
crates/proxy/src/: ext_proc.rs  gateway.rs  hbone.rs  lib.rs
crates/proxy/src/http/: filters.rs  mod.rs  pii.rs  timeout.rs  transformation.rs
crates/proxy/src/pii/: credit_card_recognizer.rs  email_recognizer.rs  mod.rs  pattern_recognizer.rs  phone_recognizer.rs  recognizer.rs  recognizer_result.rs  url_recognizer.rs  us_ssn_recognizer.rs
crates/proxy/src/store/: binds.rs  discovery.rs  mod.rs
crates/proxy/src/transport/: tls.rs
crates/proxy/src/types/: discovery.rs  mod.rs  proto.rs
crates/xds/: Cargo.toml  build.rs
crates/xds/src/: client.rs  lib.rs  metrics.rs  types.rs
examples/a2a/strands-agents/: .gitignore  README.md  __main__.py  pyproject.toml
examples/config/plugins/fs/: Cargo.toml  Dockerfile  README.md
src/: ads.rs  (+23 more)
(+231 files in other folders)
