[patch.crates-io]
schemars = {git = "https://github.com/howardjohn/schemars", rev = "4364354fa41897a0c2001d891c0a9a38eafedb82"}

[workspace]
resolver = "2"
members = [
    "crates/a2a-sdk",
    "crates/agentgateway",
    "crates/agentgateway-app",
    "crates/core",
    "crates/hbone",
    "crates/mock-server",
    "crates/xds",
    "crates/xtask",
]
default-members = [
    "crates/a2a-sdk",
    "crates/core",
    "crates/xds",
    "crates/hbone",
    "crates/agentgateway",
    "crates/agentgateway-app",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
a2a-sdk = { version = "0.7.0", path = "crates/a2a-sdk" }
agent-core = { path = "crates/core" }
agent-hbone = { path = "crates/hbone" }
agent-xds = { path = "crates/xds" }
agentgateway = { path = "crates/agentgateway" }
anyhow = "1.0"
arc-swap = "1.7.1"
arcstr = { version = "1.2", features = ["serde"] }
assert_matches = "1.5.0"
async-stream = "0.3"
async-trait = "0.1"
aws_event_stream_parser = "0.1"
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sigv4 = "1.3"
axum = { version = "0.8", features = ["macros"] }
axum-core = "0.5"
axum-extra = { version = "0.10", features = ["json-lines", "typed-header"] }
base64 = "0.22"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clocksource = "0.8"
crossbeam = "0.8"
divan = "0.1"
duration-str = "0.17"
flurry = "0.5.2"
fs-err = { version = "3.1", features = ["tokio"] }
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
google-cloud-auth = "0.21"
h2 = "0.4"
headers = "0.4"
hex = "0.4"
hickory-resolver = { version = "0.25", features = ["serde"] }
http = "1.3"
http-body = "1"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["full"] }
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["full"] }
hyper-util-fork = { path = "crates/hyper-util-fork", features = ["full"] }
include_dir = "0.7"
indexmap = { version = "2.9", features = ["serde"] }
insta = { version = "1.38", features = ["json", "redactions"] }
ipnet = { version = "2.11", features = ["serde"] }
itertools = "0.14"
jsonwebtoken = "9.3"
lazy_static = "1.4"
libc = "0.2"
minijinja = { version = "2.10", features = ["loader"] }
notify = "8.0"
notify-debouncer-full = "0.5"
num_cpus = "1.17"
once_cell = "1.21"
openapiv3 = "2.2"
opentelemetry = "0.30"
opentelemetry-http = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30"
parking_lot = "0.12"
percent-encoding = "2.3"
phonenumber = "0.3"
pin-project-lite = "0.2"
pingora-pool = "0.5"
pprof = { version = "0.15", features = [
    "protobuf",
    "protobuf-codec",
    "criterion",
] }
pretty_env_logger = "0.5"
prometheus-client = "0.23"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = "0.9"
rcgen = "0.14"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "rustls-tls",
] }
# Use release version once 0.3.2 comes out
#rmcp = { version = "0.3", features = [
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "0a9a0a0b1f234bd296459fc98b41fd6215c8e3a9", features = [
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "reqwest",
    "auth",
] }
rustc_version = "0.4"
rustls = { version = "0.23", features = ["tls12", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
schemars = { version = "=1.0.4", git = "https://github.com/howardjohn/schemars", rev = "4364354fa41897a0c2001d891c0a9a38eafedb82", features = [
#schemars = { version = "1.0", features = [
    "bytes1",
    "arcstr1",
    "raw_value",
    "preserve_order",
] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-transcode = "1.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json_path_to_error = "0.1"
serde_regex = "1.1"
serde_yaml = "0.9"
shellexpand = "3.1"
socket2 = "0.6"
split-iter = "0.1"
sse-stream = "0.2"
tempfile = "3.20"
thiserror = "2.0"
tiktoken-rs = "0.7"
tokio = { version = "1.46", features = ["full", "macros", "sync"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio_sse_codec = "0.0.2"
tonic = { version = "0.14", features = ["codegen", "transport"] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14", features = ["transport"] }
tonic-build = { version = "0.14", features = ["transport"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
tower-serve-static = "0.1"
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "json",
] }
url = "2.5"
wiremock = "0.6.3"
x509-parser = "0.17"
which = "8.0.0"
cel = { git = "https://github.com/cel-rust/cel-rust", rev = "21add787d6e028b7c60cf1a9ca4ab3c0e100abc2", features = ["json", "regex", "chrono"] }
crossbeam-channel = "0.5"
http-serde = "2.1"
itoa = "1.0"
serde_urlencoded = "0.7"
serde_with = { version = "3.14", features = ["schemars_1", "macros", "alloc"], default-features = false }
value-bag = { version = "1.11", features = ["serde", "value-bag-serde1"] }
time = "0.3"
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
jemalloc_pprof = { version = "0.8"}

# Release optimized but without as many dependencies, suitable for incremental development
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[profile.bench]
inherits = "quick-release"
debug = true
