[package]
name = "a2a-sdk"
version = "0.1.0"
edition = "2024"
description = "Unofficial Google A2A SDK"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
serde_path_to_error = "0.1.17"
