[package]
name = "a2a-sdk"
version = "0.4.0"
edition = "2024"
description = "Unofficial Google A2A SDK"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_path_to_error = { workspace = true }
