[package]
name = "agent-core"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"


[dependencies]
arcstr = { version = "1.2", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
pin-project-lite = "0.2.16"
prometheus-client = { version = "0.23" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "macros", "sync"] }
tracing = { version = "0.1"}
tracing-core = "0.1"
