[package]
name = "agent-core"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"


[dependencies]
arcstr = { workspace = true, features = ["serde"] }
bytes = { workspace = true, features = ["serde"] }
pin-project-lite = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "sync"] }
tracing = { workspace = true }
tracing-core = { workspace = true }
