[package]
name = "agent-core"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
arcstr = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
