[package]
name = "agent-hbone"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
prost-build = "0.13"
anyhow = "1.0"
rustc_version = "0.4"

[dependencies]
anyhow = "1.0"
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync", "tracing"] }
tonic = "0.12.0"
agent-core  = { path = "../agent-core"}
prometheus-client = "0.23.1"
async-stream = "0.3.6"
tracing = "0.1.41"
split-iter = "0.1.0"
http = "1.3.1"
bytes = "1.10.1"
h2 = "0.4.9"
futures = "0.3.31"
futures-util = "0.3.31"
pingora-pool = "0.4.0"
flurry = "0.5.2"
rustls = "0.23.26"
tokio-rustls = "0.26.2"
