[package]
name = "a2a-sdk"
version = "0.7.0"
edition = "2024"
description = "Unofficial Google A2A SDK. Currently supports v0.3.0 of the specification."
license = "MIT"
repository = "https://github.com/agentgateway/agentgateway"
homepage = "http://a2aproject.github.io/A2A/"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
