[package]
name = "agent-hbone"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
agent-core .workspace = true
anyhow.workspace = true
bytes.workspace = true
flurry.workspace = true
futures.workspace = true
futures-util.workspace = true
h2.workspace = true
http.workspace = true
pingora-pool.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tonic.workspace = true
tracing.workspace = true
