[package]
name = "agent-proxy-app"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
default = ["tls-ring"]
tls-ring = ["rustls/ring", "tokio-rustls/ring"]

[[bin]]
name = "agent-proxy"
path = "src/main.rs"
bench = false

[dependencies]
agent-core.workspace = true
agent-hbone.workspace = true
agent-xds.workspace = true
agent-proxy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
itertools.workspace = true
prometheus-client.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
pin-project-lite.workspace = true
http.workspace = true
axum-core.workspace = true
regex.workspace = true
serde_regex.workspace = true
hex.workspace = true
minijinja.workspace = true
once_cell.workspace = true
tracing-core.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tracing-appender.workspace = true
serde_yaml.workspace = true
duration-str.workspace = true

[lints.clippy]
# This rule makes code more confusing
assigning_clones = "allow"
# This doesn't understand `strng` which we use everywhere
borrow_interior_mutable_const = "allow"
declare_interior_mutable_const = "allow"
